11858
The workaround is:
```scala
scala> for (t @ Test <- List(1 ,2, 3)) println(Test)
<console>:9: error: pattern type is incompatible with expected type;
 found   : Test.type
 required: Int
              for (t @ Test <- List(1 ,2, 3)) println(Test)
                       ^
```
